sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:6: error: not found: value apresBleu
  while (apresBleu <= avantBlanc){
         ^DutchFlagAlgo:8: error: missing argument list for method getCouleur in class DutchFlagEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `getCouleur _` or `getCouleur(_)` instead of `getCouleur`.
    if (getCouleur(i) = BLEU){
        ^DutchFlagAlgo:9: error: not found: value apresBleu
      echange(i, apresBleu)
                 ^DutchFlagAlgo:10: error: not found: value apresBleu
      apresBleu = apresBleu +1
      ^DutchFlagAlgo:11: error: missing argument list for method getCouleur in class DutchFlagEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `getCouleur _` or `getCouleur(_)` instead of `getCouleur`.
    } else if (getCouleur(i) = ROUGE){
               ^